<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="settings_description">Choose and option to download files from the Internet</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="channel_id" translatable="false">Download Channel</string>
    <string name="channel_name" translatable="true">Downloader</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-Safe HTTP Client for Android and Java by Square, Inc</string>
    <string name="lavendercloud">LavenderCloud</string>

    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">ok</string>
</resources>
