<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/image"
        android:layout_width="475dp"
        android:layout_height="214dp"
        android:contentDescription="@string/lavendercloud"
        app:layout_constraintBottom_toTopOf="@id/button_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_lav" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_group"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">

        <RadioButton
            android:id="@+id/glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="8dp"
            android:text="@string/glide"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/loadapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="8dp"
            android:text="@string/loadapp"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/retrofit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="48dp"
            android:layout_margin="8dp"
            android:text="@string/retrofit"
            android:textSize="20sp" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_normal"
        app:colorLoading="@color/colorPrimaryDark"
        app:colorCompleted="@color/colorPrimary"
        app:textLoading="@string/button_loading"
        app:textCompleted="@string/button_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>