<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="activityDetail"
            type="com.udacity.DetailActivity" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content_detail"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fileName"
            android:text="@string/file_name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/statusName"
            app:layout_constraintEnd_toStartOf="@+id/fileText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statusName"
            android:text="@string/status"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileName"
            app:layout_constraintBottom_toTopOf="@+id/okButton"
            app:layout_constraintEnd_toStartOf="@+id/statusText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fileText"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fileName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/statusText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statusText"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/statusName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/okButton"
            app:layout_constraintTop_toBottomOf="@+id/fileText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okButton"
            android:text="@string/ok"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusName"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>